--- a/no1.html
+++ b/no1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="tenor-gif-embed" data-postid="18148463711766725559" data-share-method="host" data-aspect-ratio="1.0641" data-width="100%"><a href="https://tenor.com/view/peach-cat-crying-peach-goma-peach-and-goma-mochi-mochi-peach-cat-gif-gif-18148463711766725559">Peach Cat Crying Peach Goma Sticker</a>from <a href="https://tenor.com/search/peach+cat+crying-stickers">Peach Cat Crying Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+        <div class="tenor-gif-embed" data-postid="18299470388440170002" data-share-method="host" data-aspect-ratio="1.125" data-width="100%"><a href="https://tenor.com/view/cozy-cat-cozy-cat-comfy-7tv-gif-18299470388440170002">Cozy Cat Cozy Sticker</a>from <a href="https://tenor.com/search/cozy-stickers">Cozy Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
         <h1>¿Estas Segura? Piensalo bien 😥  </h1>
         <div class="btn">
             <a href="si.html">SI</a>
