--- a/no2.html
+++ b/no2.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="tenor-gif-embed" data-postid="21443416" data-share-method="host" data-aspect-ratio="0.95625" data-width="100%"><a href="https://tenor.com/view/white-cat-cats-hell-yeah-cat-gif-21443416">White Cat Cats GIF</a>from <a href="https://tenor.com/search/white+cat-gifs">White Cat GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+        <div class="tenor-gif-embed" data-postid="14161353251567780183" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/mochi-cat-face-to-screen-gif-14161353251567780183">Mochi Cat Face To Screen Sticker</a>from <a href="https://tenor.com/search/mochi+cat-stickers">Mochi Cat Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
         <h1>Al final no hay otro opcion jaja  </h1>
         <div class="btn">
             <a href="si.html">SI</a>
